tests/snapshots/cli__tests__fail-any-in-search-mode-stdin.snap
---
source: tests/cli.rs
expression: "CommandSnap {\n    args,\n    stdin: None,\n    stdout: stdout.split_inclusive('\\n').map(ToOwned::to_owned).collect_vec(),\n    exit_code,\n}"
info:
  stderr:
    - "Error: Error applying: Some input was in scope"
---
args:
  - "--fail-any"
  - "--python"
  - strings
  - y
stdin: ~
stdout: []
exit_code: 1
