tests/snapshots/cli__tests__fail-any-outside-search-mode-sorted.snap
---
source: tests/cli.rs
expression: "CommandSnap {\n    args,\n    stdin: None,\n    stdout: stdout.split_inclusive('\\n').map(ToOwned::to_owned).collect_vec(),\n    exit_code,\n}"
info:
  stderr:
    - "Error: Some input was in scope"
---
args:
  - "--sorted"
  - "--fail-any"
  - "--glob"
  - "**/*.py"
  - "."
stdin: ~
stdout: []
exit_code: 1
